--- a/profile.html
+++ b/profile.html
@@ -26,7 +26,7 @@
     </div>
   </div>
   <div class="modal">
-    <img src="https://i.imgur.com/vUKDMQW.jpg" alt="img">
+    <img src="https://telegra.ph/file/f9a3f6823a9b6871c5c7f.jpg" alt="img">
     <div class="close"></div>
   </div>
 
@@ -60,7 +60,7 @@
             </div>
           </div>
           <h3 class="name">Ruztan XD</h3>
-          <h3 class="sub-name">@hxd_projects17</h3>
+          <h3 class="sub-name">@rustan__03</h3>
         </div>
       </div>
 
