--- a/profile.html
+++ b/profile.html
@@ -26,7 +26,7 @@
     </div>
   </div>
   <div class="modal">
-    <img src="https://i.imgur.com/vUKDMQW.jpg" alt="img">
+    <img src="https://telegra.ph/file/f9a3f6823a9b6871c5c7f.jpg" alt="img">
     <div class="close"></div>
   </div>
 
