--- a/profile.html
+++ b/profile.html
@@ -68,7 +68,8 @@
         <div class="left">
           <div class="about-container">
             <h3 class="title">About</h3>
-            <p class="text">Masih Kosong Kak:)</p>
+            <p class="text">INGIN SUKSES DI USIA MUDAH 
+             MAU ORDER WEB KEK GINI? HUB WA DI BAWAH:)</p>
           </div>
           <div class="icons-container">
             <a href="https://github.com/Danuy-Coder" class="icon">
